[tool.poetry]
name = "smart-intervention"
version = "0.1.0"
description = ""
authors = ["Tomasz Rejowski <tomasz.rejowski@swmansion.com>"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.4"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
